# RA.Aid

./: package.json  pyproject.toml  requirements-dev.txt
frontend/common/: package.json
ra_aid/: __main__.py
ra_aid/tools/: list_directory.py
tests/ra_aid/: test_main.py
