[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ra-aid"
dynamic = ["version"]
description = "RA.Aid - ReAct Aid"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["langchain", "ai", "agent", "tools", "development"]
authors = [{name = "AI Christianson", email = "ai.christianson@christianson.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "langchain-anthropic==0.3.15",
    "langchain-aws==0.2.30",
    "langchain-openai==0.3.15",
    "langchain-ollama==0.3.5",
    "langchain-google-genai==2.1.5",
    "langchain-fireworks",
    "langchain-groq==0.3.5",
    "langgraph==0.3.25",
    "langgraph-checkpoint==2.0.25",
    "langchain-core==0.3.72",
    "langgraph-prebuilt==0.1.5",
    "langgraph-sdk==0.1.60",
    "langchain==0.3.25",
    "boto3==1.39.7",
    "rich==13.7.0",
    "GitPython==3.1.45",
    "fuzzywuzzy==0.18.0",
    "rapidfuzz",
    "pathspec==0.12.0",
    "pyte",
    "tavily-python",
    "litellm",
    "fastapi",
    "uvicorn==0.25.0",
    "websockets==12.0",
    "jinja2==3.1.3",
    "python-Levenshtein",
    "python-magic",
    "peewee",
    "peewee-migrate",
    "platformdirs",
    "requests==2.32.0",
    "packaging==24.0",
    "prompt-toolkit==3.0.45",
    "mcp[cli]",
    "langchain-mcp-adapters==0.0.6",
    "langchain-deepseek==0.1.3",
    "langchain-text-splitters==0.3.8",
    "protobuf==5.29.3",
]

[project.optional-dependencies]
dev = [
    "pytest-timeout",
    "pytest==8.0.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.15.0",
]

[project.scripts]
ra-aid = "ra_aid.__main__:main"

[project.urls]
Homepage = "https://github.com/ai-christianson/RA.Aid"
Documentation = "https://github.com/ai-christianson/RA.Aid#readme"
Repository = "https://github.com/ai-christianson/RA.Aid.git"
Issues = "https://github.com/ai-christianson/RA.Aid/issues"

[tool.setuptools.dynamic]
version = {attr = "ra_aid.version.__version__"}

[tool.hatch.version]
path = "ra_aid/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["ra_aid"]
