[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ra-aid"
dynamic = ["version"]
description = "RA.Aid - ReAct Aid"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["langchain", "ai", "agent", "tools", "development"]
authors = [{name = "AI Christianson", email = "ai.christianson@christianson.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "langchain-anthropic==0.3.15",
    "langchain-aws==0.2.30",
    "langchain-openai==0.3.15",
    "litellm>=1.60.6",
    "langchain-ollama==0.3.5",
    "langchain-google-genai==2.1.5",
    "langchain-fireworks >= 0.2.0, < 1.0.0",
    "langchain-groq==0.3.5",
    "langgraph==0.3.25",
    "langgraph-checkpoint==2.0.25",
    "langchain-core>=0.3.72",
    "langgraph-prebuilt==0.1.5",
    "langgraph-sdk==0.1.60",
    "langchain==0.3.25",
    "boto3==1.42.4",
    "fastapi==0.124.0",
    "fuzzywuzzy==0.18.0",
    "gitpython==3.1.45",
    "jinja2==3.1.6",
    "langchain-deepseek==0.1.3",
    "langchain-mcp-adapters>=0.0.6",
    "langchain-text-splitters==0.3.8",
    "mcp[cli]>=1.4.1",
    "packaging==25.0",
    "pathspec==0.12.1",
    "peewee",
    "peewee-migrate",
    "platformdirs",
    "prompt-toolkit==3.0.52",
    "pyte==0.8.2",
    "python-Levenshtein==0.27.3",
    "python-magic==0.4.27",
    "rapidfuzz==3.14.3",
    "requests==2.32.5",
    "rich==14.2.0",
    "tavily-python==0.7.14",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
    "protobuf==5.29.3",
]

[project.optional-dependencies]
dev = [
    "pytest-timeout==2.3.1",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
]

[project.scripts]
ra-aid = "ra_aid.__main__:main"

[project.urls]
Homepage = "https://github.com/ai-christianson/RA.Aid"
Documentation = "https://github.com/ai-christianson/RA.Aid#readme"
Repository = "https://github.com/ai-christianson/RA.Aid.git"
Issues = "https://github.com/ai-christianson/RA.Aid/issues"

[tool.setuptools.dynamic]
version = {attr = "ra_aid.version.__version__"}

[tool.hatch.version]
path = "ra_aid/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["ra_aid"]
